@@ -38,6 +38,7 @@ if (spData.plotPar.runStatWin(1) < spData.analysis.erpWin(1)) || (spData.plotPar
     spData.plotPar.runStatWin(1) = spData.analysis.erpWin(1);
     spData.plotPar.runStatWin(2) = spData.analysis.erpWin(2);
 end
+
 % get time resolution
 timeRes = 1000/spData.analysis.sampRate;
 % get relevant range for testing (in ms from beginning
@@ -49,7 +50,6 @@ statRange = [ceil(statRangeMS(1)/timeRes) ceil(statRangeMS(2)/timeRes)];
 statRange(statRange == 0) = 1;
 % get relevant data
 statData = erpAll(:,spData.currInd,statRange(1):statRange(2),spData.channelIndex);
-
 % initialize array to store p values
 pVals = zeros(1,size(statData,3));    
 r = pVals;
